# FMI_OOP

./: CMakeLists.txt  articol.cpp  articol.h  camasa.cpp  cos.cpp  discount.cpp  discount.h  geaca.cpp  geaca.h  hanorac.cpp  inventar.h  magazin.cpp  magazin.h  proiect.cpp  tricou.cpp  tricou.h
