cmake_minimum_required(VERSION 3.28)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(OOP
        articol.cpp
        articol.h
        camasa.cpp
        camasa.h
        client.cpp
        client.h
        cos.cpp
        cos.h
        geaca.cpp
        geaca.h
        hanorac.cpp
        hanorac.h
        magazin.cpp
        magazin.h
        proiect.cpp
        tricou.cpp
        tricou.h
        inventar.h
        discount.h
        discount.cpp)
